feat: improve customer area UI

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -48,6 +48,7 @@
   "Invoice Number": "Nomor Faktur",
   "Male": "Laki-Laki",
   "Data": "Data",
+  "here": "sini",
   "Monthly Sales": "Penjualan Bulanan",
   "Monthly Sales Report": "Laporan Penjualan Bulanan",
   "Name": "Nama",
